# mcp-server-template

./: Makefile  README.md  pyproject.toml
.github/workflows/: docker.yml  publish.yml
src/mcp_server_template/: server.py
src/mcpservertemplate/: server.py
tests/: test_server.py
